# proofreading-2024-12

./: .gitignore  README.md
proofreading_hpc_simulation_and_plot/: README.md  create_parameters.py  rd_solver.py  run_simulation.py  sankey_mod.py  shared.py  simulation_loader.py  zarr_init.py
proofreading_plot/: README.md
proofreading_plot/figure2a/: figure 2a.ipynb  rd_solver.py
proofreading_plot/figure3b_3e_4d/: figure_3e.ipynb
proofreading_plot/figure3e/: figure_3e_20250320.ipynb
proofreading_plot/figure4/: figure_para_20250305.ipynb
proofreading_plot/figure5/: 20250430_mao_zhuo_sampling_for parameter.ipynb  20250520_mao_zhuo_sampling_fidelity_speed.ipynb  20250528.ipynb  Figure5.ipynb
proofreading_plot/figure6/: figure6D.ipynb
proofreading_plot/figureS3B 2B/: figure S3b 2B.ipynb  rd_solver.py
proofreading_plot/figureS3B 2B/parameter/: Untitled-1.ipynb
proofreading_plot/figureS5/: KPR_competition.ipynb  figureS5_upperbound_kp.ipynb
proofreading_plot_yyx/: README.md  RXN_params_yuanqi.py  bounded_1d_kde.py  create_parameters.py  figure_2.py  figure_2_init.py  figure_2_lhs.py  figure_2_plot.ipynb  rd_solver.py  sankey_mod.py  shared.py  simulation_loader.py  workflow.sh
rust_lib_proofreading/: Cargo.toml  README.md  pyproject.toml
rust_lib_proofreading/src/: lib.rs
