[package]
name = "rust_lib_proofreading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_lib_proofreading"
crate-type = ["cdylib"]

[dependencies]
csv = "1.3.1"
itertools = "0.13.0"
pyo3 = "0.23.1"
thiserror = "2.0.9"
